--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,17 +8,21 @@
 <body>
     <%- include('./partials/nav') %>
     <div class="container mt-3">
-        <% blogs.forEach(blog => { %>
-            <div class="card" style="width: 18rem;">
-                <img src="<%= blog.coverImageURL %>" class="card-img-top" alt="Cover Image">
-                <div class="card-body">
-                  <h5 class="card-title"><%= blog.title %></h5>
-                  <a href="/blog/<%= blog._id  %>" class="btn btn-primary">View</a>
-                </div>
-              </div>
-     
-        <% }) %>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
+            <% blogs.forEach(blog => { %>
+                <div class="col">
+                    <div class="card" style="width: 100%;">
+                        <img src="<%= blog.coverImageURL %>" class="card-img-top" alt="Cover Image" style="height: 200px; object-fit: cover;">
+                        <div class="card-body">
+                            <h5 class="card-title"><%= blog.title %></h5>
+                            <a href="/blog/<%= blog._id  %>" class="btn btn-primary">View</a>
+                        </div>
+                    </div>
+                </div>     
+            <% }) %>
+        </div>
     </div>
+    
     <%- include('./partials/scripts') %>
     
 </body>
